cmake_minimum_required(VERSION 2.6)
project(FireOS)
add_subdirectory(src)
add_subdirectory(doc)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(mkimg mkimg.c)
target_link_libraries(mkimg m)
add_executable(run_test tests/run_test.c)
add_subdirectory(tests)
add_subdirectory(libc)
enable_testing()
include(tests/cmake_add_test.txt)
