cmake_minimum_required(VERSION 2.6)
project(FireOS_LIBC C)
set(CMAKE_SYSTEM_NAME "Generic")
set(CMAKE_ASM_NASM_FLAGS "-f elf32 -F stabs -g")
set(CMAKE_ASM_NASM_OBJECT_FORMAT "elf32")
set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_C_COMPILER ../gcc-cross/bin/i686-elf-gcc)
set(CMAKE_C_FLAGS "-ffreestanding -fno-builtin -nostdlib -Wall -Wextra -Werror -Wno-unused-parameter -std=gnu99 -g")
enable_language(ASM_NASM)

add_library(c STATIC src/crt0.nasm src/stdio.c src/sys_call.c src/string.c src/unistd.c src/stdlib.c src/sys_wait.c)
include_directories(include/)
